[package]
name = "rsfk"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
input-macro = "0.2.0"
num = "0.4.1"
rsfk-core = { version="0.1.0", path = "./src/rsfk-core" }
