[package]
name = "rsfk-core"
version = "0.1.0"
edition = "2021"
description = "Dependency of the rsfk project. Contains a brainfuck state machine."
authors = ["Pickaxe828"]
license = "MIT"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
input-macro = "0.2.0"
num = "0.4.1"